# test

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  core.cpp  test.sln  test.vcxproj  test.vcxproj.filters  unit.h
.github/workflows/: linux.yml  windows.yml
units/: crt.h  hash.h
